# M-Detector-ROS2

./: CMakeLists.txt  README.md  package.xml
config/avia/: avia0.yaml  avia1.yaml
config/horizon/: horizon.yaml
config/kitti/: kitti0.yaml  kitti1.yaml  kitti2.yaml
config/mid360/: mid360.yaml
config/mid70/: mid70.yaml
config/nuscenes/: nuscenes0.yaml  nuscenes1.yaml  nuscenes2.yaml  nuscenes3.yaml
config/waymo/: waymo0.yaml  waymo1.yaml
include/m-detector/: DynObjCluster.h  DynObjFilter.h
launch/: cal_recall.launch.py  detector_avia.launch.py  detector_horizon.launch.py  detector_kitti.launch.py  detector_mid360.launch.py  detector_mid70.launch.py  detector_nuscenes.launch.py  detector_waymo.launch.py  display.launch.py
rviz/: demo.rviz
src/: DynObjCluster.cpp  DynObjFilter.cpp  cal_recall_multi.cpp  display_prediction.cpp  dynfilter_with_odom.cpp
