<?xml version="1.0"?>
<package format="3">
  <name>m_detector</name>
  <version>0.0.0</version>
  <description>
    This is an implemented version of M-detector which is original algorithm
    is described in the following paper:
        Moving Event Detection from LiDAR Point Streams.
    This package has been migrated to ROS2.
  </description>

  <maintainer email="yaoyuzhuo6@gmail.com">YuzhuoYao</maintainer>

  <license>GPL-2.0</license>

  <author email="wu2020@connect.hku.hk">HuajieWu</author>
  <author email="yhangli@connect.hku.hk">YihangLi</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>livox_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
